# Nova-Compiler-1

./: .gitignore  CMakeLists.txt  README.md  check.mlir  driver.cpp  execution_log.txt  gputest.mlri  intermediate.mlir  new.cpp  output.ll  output.mlir  robust_driver.cpp  run_robust_tests.sh  run_standard_pipeline.sh  test_chain_before_bufferization.mlir  test_chain_output.mlir  test_cpu_output.mlir  test_gpu_output.mlir  test_mem_global.mlir  test_mixed_output.mlir  test_ml_prog.mlir  test_redundant_output.mlir  test_tosa_var.mlir  tile_dump.txt  unaryoutput.txt  with_binary.mlir
include/Compiler/: CMakeLists.txt
include/Compiler/API/: NovaCompilerAPI.h
include/Compiler/Dialect/nova/: CMakeLists.txt  NovaDialect.h  NovaDialect.td  NovaOps.h  NovaOps.td  Traits.h
include/Compiler/Pipeline/: Gpupipeline.h
include/Compiler/Runtime/: NovaClient.h  NovaDevice.h  NovaExecutable.h  NovaThunk.h
include/Compiler/Runtime-PJRT/: NovaBuffer.h
include/Compiler/Transforms/: AddGpuMemoryCopies.h  FixGpuLaunch.h  Passes.h  Passes.td
include/Compiler/Translation/NovaToArith/: NovaToArith.cpp  NovaToArith.h
include/Compiler/Translation/NovaToLinalg/: CMakeLists.txt  NovaToLinNamed.cpp  NovaToLinalg.cpp  NovaToLinalg.h  TNovaToLinalg.cpp
include/Compiler/Translation/NovaToTosa/: NovaToTosa.cpp  NovaToTosa.h  TNovaToTosa.cpp
include/Runtime/Core/: AsyncValue.h  ErrorHandling.h  HostContext.h  MemoryAllocator.h
include/Runtime/Executor/: DependencyGraph.h  ExecutionEngine.h  ExecutionPlan.h  KernelRegistry.h
include/Runtime/Kernels/: KernelRegistration.h
lib/: CMakeLists.txt
lib/API/: NovaCompilerAPI.cpp
lib/Dialect/nova/: NovaCanonicalizations.cpp  NovaDialect.cpp  NovaOps.cpp
lib/Pipeline/: CMakeLists.txt  Gpupipeline.cpp  Pipeline.cpp
lib/Runtime/: CMakeLists.txt  NovaBuffer.cpp  NovaClient.cpp  NovaDevice.cpp  NovaExecutable.cpp
lib/Runtime-PJRT/: NovaBuffer.cpp  NovaClient.cpp  NovaDevice.cpp  NovaExecutable.cpp
lib/Runtime/Core/: AsyncValue.cpp  CMakeLists.txt  ErrorHandling.cpp  HostContext.cpp  MemoryAllocator.cpp
lib/Runtime/Executor/: CMakeLists.txt  DependencyGraph.cpp  ExecutionEngine.cpp  KernelRegistry.cpp
lib/Runtime/Kernels/: CMakeLists.txt
lib/Runtime/Kernels/CUDA/: CMakeLists.txt  CudaKernels.cpp
lib/Runtime/Kernels/Host/: CMakeLists.txt  HostKernels.cpp
lib/Runtime/Test/: CMakeLists.txt  RuntimeFlowTest.cpp
lib/Transforms/: AddGpuMemoryCopies.cpp  CMakeLists.txt  ConvertMemRefToGpu.cpp  FixGpuLaunch.cpp  FuseMatmulBias.cpp  ParallelizeOuterLoops.cpp
lib/Transforms/Affine/: DependencyAnalysisTestPass.cpp
ltest/: 1unary.mlir  2binary.mlir  3loss.mlir  4reducomp.mlir  5activefunc.mlir  6otherops.mlir  activefunc.mlir  activefuncoutput.txt  binary.mlir  binaryoutput.txt  chained_gpu.mlir  device_combinations.mlir  loss.mlir  lossoutput.txt  randomop.mlir  redcomp.mlir  redcompoutput.txt  robust_tests.mlir  test.mlir  test_cpu.mlir  test_gpu.mlir  test_mixed.mlir  test_sanity.mlir  testing.mlir  todevice_valid.mlir  unary.mlir  unaryoutput.txt
test/: CMakeLists.txt  dynamic_test.mlir  fusion_cast.mlir  fusion_reshape.mlir  matmul_test.mlir  output.mlir  simple_test.mlir  tensoralloc.mlir  test.mlir  test_adam.mlir  test_large_3d.mlir  testexpo.mlir  testh.mlir  testmlp.mlir  testmodel.mlir  testmodel.py  tosa_llm_canonicalization_test.mlir
test/Runtime/: BufferTest.cpp  CMakeLists.txt  DeviceTest.cpp
test/Runtime-PJRT/: BufferTest.cpp  DeviceTest.cpp
tools/: CMakeLists.txt
tools/nova-opt/: CMakeLists.txt  nova-opt.cpp
tools/nova-translate/: CMakeLists.txt  nova-translate.cpp
